--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "invoice-ticket",
-  "version": "1.0.0",
-  "description": "",
-  "author": "Sebastian Rothe",
-  "license": "ISC",
-  "scripts": {
-    "start": "npx browser-sync start --server --watch"
-  },
-  "dependencies": {
-    "heml": "^1.1.3"
-  }
+    "name": "invoice-ticket",
+    "version": "1.0.0",
+    "description": "",
+    "author": "Sebastian Rothe",
+    "license": "ISC",
+    "scripts": {
+        "start": "browser-sync start --server 'src' --watch --files 'src'",
+        "dev": "heml develop src/ticket.heml --open"
+    },
+    "dependencies": {
+        "browser-sync": "^2.24.7",
+        "heml": "^1.1.3"
+    }
 }
